[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/light_spaacebar_red.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/spaacebar_red.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/key_red.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/back_btn.png" type="Texture" id=4]
[ext_resource path="res://menu/layers/dialogue_box.tscn" type="PackedScene" id=5]
[ext_resource path="res://menu/layers/movement_guide.gd" type="Script" id=6]
[ext_resource path="res://assets/Scenery/movement_guide.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/light_key_red.png" type="Texture" id=8]

[node name="MovementGuide" type="CanvasLayer"]
layer = 2
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -134.0
margin_top = 63.0
margin_right = -94.0
margin_bottom = 103.0

[node name="ReturnButton" type="TextureButton" parent="TextureRect/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
margin_left = 731.0
margin_top = 511.0
margin_right = 761.0
margin_bottom = 541.0
rect_pivot_offset = Vector2( 15, 15 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="TextureRect"]
margin_left = 705.0
margin_top = 546.0
margin_right = 735.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 15, 15 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 3 )

[node name="TextureButton3" type="TextureButton" parent="TextureRect"]
margin_left = 740.0
margin_top = 546.0
margin_right = 770.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 15, 15 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 3 )

[node name="TextureButton4" type="TextureButton" parent="TextureRect"]
margin_left = 775.0
margin_top = 546.0
margin_right = 805.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 15, 15 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 3 )

[node name="TextureButton5" type="TextureButton" parent="TextureRect"]
margin_left = 679.0
margin_top = 476.0
margin_right = 709.0
margin_bottom = 506.0
rect_pivot_offset = Vector2( 15, 15 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 3 )

[node name="TextureButton6" type="TextureButton" parent="TextureRect"]
margin_left = 714.0
margin_top = 476.0
margin_right = 744.0
margin_bottom = 506.0
rect_pivot_offset = Vector2( 15, 15 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 3 )

[node name="TextureButton7" type="TextureButton" parent="TextureRect"]
margin_left = 749.0
margin_top = 476.0
margin_right = 779.0
margin_bottom = 506.0
rect_pivot_offset = Vector2( 15, 15 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 3 )

[node name="TextureButton8" type="TextureButton" parent="TextureRect"]
margin_left = 775.0
margin_top = 616.0
margin_right = 987.0
margin_bottom = 646.0
rect_pivot_offset = Vector2( 15, 15 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[node name="TextureButton9" type="TextureButton" parent="TextureRect"]
margin_left = 644.0
margin_top = 433.0
margin_right = 674.0
margin_bottom = 463.0
rect_pivot_offset = Vector2( 15, 15 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 3 )

[node name="TextureButton10" type="TextureButton" parent="TextureRect"]
margin_left = 1010.0
margin_top = 511.0
margin_right = 1040.0
margin_bottom = 541.0
rect_pivot_offset = Vector2( 15, 15 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 3 )

[node name="dialoguebox" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="TextureRect/MarginContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="mouse_entered" from="TextureRect/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/TextureButton2" to="." method="_on_TextureButton2_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton2" to="." method="_on_TextureButton2_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/TextureButton3" to="." method="_on_TextureButton3_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton3" to="." method="_on_TextureButton3_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/TextureButton4" to="." method="_on_TextureButton4_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton4" to="." method="_on_TextureButton4_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/TextureButton5" to="." method="_on_TextureButton5_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton5" to="." method="_on_TextureButton5_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/TextureButton6" to="." method="_on_TextureButton6_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton6" to="." method="_on_TextureButton6_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/TextureButton7" to="." method="_on_TextureButton7_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton7" to="." method="_on_TextureButton7_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/TextureButton8" to="." method="_on_TextureButton8_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton8" to="." method="_on_TextureButton8_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/TextureButton9" to="." method="_on_TextureButton9_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton9" to="." method="_on_TextureButton9_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/TextureButton10" to="." method="_on_TextureButton10_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/TextureButton10" to="." method="_on_TextureButton10_mouse_exited"]
